--- a/project.properties
+++ b/project.properties
@@ -10,10 +10,10 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../ActionBar-PullToRefresh
-android.library.reference.2=../drag-sort-listview
-android.library.reference.3=../SlidingMenu
-android.library.reference.4=../google-play-services_lib
-android.library.reference.5=../SmoothProgressBar
-android.library.reference.6=../HoloAccent
-android.library.reference.7=../MenuComponent
+android.library.reference.1=../holoaccent/HoloAccent
+android.library.reference.2=../ActionBar-PullToRefresh/library
+android.library.reference.3=../SlidingMenu/library
+android.library.reference.4=../Android-MenuComponent/library
+android.library.reference.5=../SmoothProgressBar/library/src/main
+android.library.reference.6=../../../Documents/workspace/google-play-services_lib
+android.library.reference.7=../drag-sort-listview/library
