--- a/project.properties
+++ b/project.properties
@@ -10,10 +10,10 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../ActionBar-PullToRefresh
-android.library.reference.2=../drag-sort-listview
-android.library.reference.3=../SlidingMenu
-android.library.reference.4=../google-play-services_lib
-android.library.reference.5=../SmoothProgressBar
-android.library.reference.6=../HoloAccent
-android.library.reference.7=../MenuComponent
+android.library.reference.1=../drag-sort-listview/library
+android.library.reference.2=../../../../../opt/adt/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../holoaccent/HoloAccent
+android.library.reference.4=../Android-MenuComponent/library
+android.library.reference.5=../ActionBar-PullToRefresh/library
+android.library.reference.6=../SlidingMenu/library
+android.library.reference.7=../SmoothProgressBar/library/src/main
